# HomeWork6-Block2

./: README.md  faker_filler.py  pyproject.toml  query_request_12.sql
