[tool.poetry]
name = "homework6-block2"
version = "0.1.0"
description = "Home Work 6 from Block 2 by Volodymyr Sytnyk"
authors = ["NeverInMind"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
